--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@chakra-ui/react": "^3.21.1",
     "@emotion/react": "^11.14.0",
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.10.0",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
+    "phosphor-react": "^1.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
