--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/charts": "^3.23.0",
     "@chakra-ui/react": "^3.21.1",
     "@emotion/react": "^11.14.0",
     "@heroicons/react": "^2.2.0",
@@ -21,6 +22,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
+    "recharts": "^3.1.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
